overlay z-index fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,10 @@ body{
   object-fit: cover;
 }
 
+.about-img{
+  z-index: -3;
+}
+
 .overlay {
   position: absolute;
   top: 0;
